refactor(linter-and-formatter): removes prettier and eslint and replace with biomejs feat(shadcn-ui-components): add shadcn button and progress components

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-neutral-800">
+<html lang="en" class="bg-neutral-800 text-neutral-300">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
