feat: adds pwa download

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" href="/favicon.ico" />
+		<link rel="apple-touch-icon" href="/icon512_maskable.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Vitamin" />
-		<meta name="theme-color" content="#42b883" />
+		<meta name="description" content="Spotify" />
+		<meta name="theme-color" content="#57b660" />
 		<title>Spotify</title>
 	</head>
 	<body>
