--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
 		<link rel="icon" type="image/png" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/icon512_maskable.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Spotify" />
+
+		<meta name="title" content="Spotify" />
+		<meta name="description" content="Veja os albums de seus artistas favoritos" />
 		<meta name="theme-color" content="#57b660" />
+		<meta name="author" content="Makley Tibola Trichez" />
+
+		<meta name="og:title" content="Spotify" />
+		<meta name="og:description" content="Veja os albums de seus artistas favoritos" />
+		<meta name="og:image" content="/icon512.png" />
+		<meta name="og:url" content="https://spotify-clone-psi.vercel.app" />
+		<meta name="og:type" content="website" />
+
 		<title>Spotify</title>
 	</head>
 	<body>
