chore: add meta tag for site preview

--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/png" href="/favicon.ico" />
-		<link rel="apple-touch-icon" href="/icon512_maskable.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<meta name="title" content="Spotify" />
-		<meta name="description" content="Veja os albums de seus artistas favoritos" />
+		<meta name="des cription" content="Veja os albums de seus artistas favoritos" />
 		<meta name="theme-color" content="#57b660" />
 		<meta name="author" content="Makley Tibola Trichez" />
+		<meta name="image" content="/icon512_maskable.png" />
+		<meta name="url" content="https://spotify-integration-three.vercel.app/playlists" />
 
 		<meta name="og:title" content="Spotify" />
 		<meta name="og:description" content="Veja os albums de seus artistas favoritos" />
-		<meta name="og:image" content="/icon512.png" />
-		<meta name="og:url" content="https://spotify-clone-psi.vercel.app" />
+		<meta name="og:image" content="/icon512_maskable.png" />
+		<meta name="og:url" content="https://spotify-integration-three.vercel.app/playlists" />
 		<meta name="og:type" content="website" />
+		<meta name="og:site_name" content="Spotify" />
+		<meta name="og:locale" content="pt_BR" />
+
+		<link rel="icon" type="image/png" href="/favicon.ico" />
+		<link rel="apple-touch-icon" href="/icon512_maskable.png" />
 
 		<title>Spotify</title>
 	</head>
